fix scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -103,14 +103,11 @@ code {
 
 pre {
   padding: 8px 12px;
-  overflow-x: scroll; }
+  overflow-x: auto; }
   pre > code {
     border: 0;
     padding-right: 0;
     padding-left: 0; }
-
-pre.line-pre {
-  overflow-x: auto; }
 
 .sidebar {
   float: right;
